--- a/charts/stable/flashpaper/questions.yaml
+++ b/charts/stable/flashpaper/questions.yaml
@@ -28,7 +28,7 @@ questions:
         - variable: MAX_SECRET_LENGTH
           label: max Secret Length
           schema:
-            type: string
+            type: int
             default: 3000
         - variable: ANNOUNCEMENT
           label: Announcement
