--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -51,7 +51,7 @@
       "bumpVersion": "major",
       "labels": ["update/helm/dependency/major"],
       "groupName": ["helm dependency major"],
-      "matchPaths": ["charts/dependency/*"],
+      "matchPaths": ["charts/dependency/**"],
     },
     {
       "matchDatasources": ["helm"],
@@ -62,7 +62,7 @@
       ],
       "bumpVersion": "patch",
       "labels": ["update/helm/dependency/non-major"],
-      "matchPaths": ["charts/dependency/*"],
+      "matchPaths": ["charts/dependency/**"],
       "groupName": "helm dependency non-major",
     },
     //
@@ -74,7 +74,7 @@
       "bumpVersion": "major",
       "labels": ["update/helm/general/major"],
       "groupName": ["helm general major"],
-      "matchPaths": ["charts/incubator/*", "charts/SCALE/*", "charts/dev/*", "charts/enterprise/*", "charts/stable/*", "templates/app/*"],
+      "matchPaths": ["charts/incubator/**", "charts/SCALE/**", "charts/dev/**", "charts/enterprise/**", "charts/stable/**", "templates/app/**"],
       "schedule": [
         "before 10pm on tuesday"
       ],
@@ -89,7 +89,7 @@
       "bumpVersion": "patch",
       "labels": ["update/helm/general/non-major"],
       "groupName": "helm general non-major",
-      "matchPaths": ["charts/incubator/*", "charts/SCALE/*", "charts/dev/*", "charts/enterprise/*", "charts/stable/*", "templates/app/*"],
+      "matchPaths": ["charts/incubator/**", "charts/SCALE/**", "charts/dev/**", "charts/enterprise/**", "charts/stable/**", "templates/app/**"],
       "schedule": [
         "before 10pm on tuesday"
       ],
@@ -102,7 +102,7 @@
       "updateTypes": ["major"],
       "bumpVersion": "major",
       "labels": ["update/docker/enterprise/major"],
-      "matchPaths": ["charts/enterprise/*"],
+      "matchPaths": ["charts/enterprise/**"],
     },
     {
       "matchDatasources": ["docker"],
@@ -112,7 +112,7 @@
       ],
       "bumpVersion": "patch",
       "labels": ["update/docker/enterprise/minor"],
-      "matchPaths": ["charts/enterprise/*"],
+      "matchPaths": ["charts/enterprise/**"],
     },
     {
       "matchDatasources": ["docker"],
@@ -124,7 +124,7 @@
       ],
       "bumpVersion": "patch",
       "labels": ["update/docker/enterprise/patch"],
-      "matchPaths": ["charts/enterprise/*"],
+      "matchPaths": ["charts/enterprise/**"],
     },
     //
     // Tag updates for semantic tags on all but enterprise Apps
@@ -134,7 +134,7 @@
       "updateTypes": ["major"],
       "bumpVersion": "minor",
       "labels": ["update/docker/general/major", "automerge"],
-      "matchPaths": ["charts/dependency/*", "charts/SCALE/*", "charts/incubator/*", "charts/dev/*", "charts/stable/*", "templates/app/*"],
+      "matchPaths": ["charts/dependency/**", "charts/SCALE/**", "charts/incubator/**", "charts/dev/**", "charts/stable/**", "templates/app/**"],
     },
     {
       "matchDatasources": ["docker"],
@@ -147,7 +147,7 @@
       ],
       "bumpVersion": "patch",
       "labels": ["update/docker/general/non-major", "automerge"],
-      "matchPaths": ["charts/dependency/*", "charts/SCALE/*",  "charts/incubator/*", "charts/dev/*", "charts/library/*", "charts/stable/*", "templates/app/*"],
+      "matchPaths": ["charts/dependency/**", "charts/SCALE/**",  "charts/incubator/**", "charts/dev/**", "charts/library/**", "charts/stable/**", "templates/app/**"],
     },
     //
     // Tag semantic version type based on regex
