--- a/charts/incubator/traktarr/Chart.yaml
+++ b/charts/incubator/traktarr/Chart.yaml
@@ -1,7 +1,3 @@
-annotations:
-  truecharts.org/SCALE-support: "true"
-  truecharts.org/catagories: |
-    - Tools-Utilities
 apiVersion: v2
 appVersion: "latest"
 dependencies:
@@ -9,7 +5,7 @@ dependencies:
     repository: https://library-charts.truecharts.org
     version: 11.0.7
 deprecated: false
-description: "Script to add new series and movies to Sonarr/Radarr based on Trakt lists."
+description: Script to add new series and movies to Sonarr/Radarr based on Trakt lists.
 home: https://truecharts.org/docs/charts/incubator/traktarr
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/traktarr.png
 keywords:
@@ -26,4 +22,9 @@ sources:
   - https://github.com/l3uddz/traktarr
   - https://hub.docker.com/r/eafxx/traktarr
 type: application
-version: 2.0.3
+version: 2.0.4
+annotations:
+  truecharts.org/catagories: |
+    - Tools-Utilities
+  truecharts.org/SCALE-support: "true"
+  truecharts.org/grade: U
