--- a/charts/incubator/traktarr/values.yaml
+++ b/charts/incubator/traktarr/values.yaml
@@ -1,23 +1,36 @@
-env:
-  APP_BRANCH: ""
-  BLACKLIST: ""
-  DELAY: ""
-  NOSEARCH: ""
-  NOTIFICATIONS: ""
-  RUNNOW: ""
-  SKIPUPDATE: ""
-  SORT: ""
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/traktarr
   tag: latest@sha256:c3f2e4c967f7574d13b234c8cfa5d5bc25c007d891ecf8bf78e04f0654033785
-persistence:
-  config:
-    enabled: true
-    mountPath: /config
+
+traktarr:
+  app_branch: master
+  blacklist: true
+  nosearch: true
+  notifications: true
+  runnow: false
+  skipupdate: true
+  delay: "2.5"
+  sort: rating
+
+env:
+  APP_BRANCH: "{{ .Values.traktarr.app_branch }}"
+  BLACKLIST: '{{ ternary "yes" "no" .Values.traktarr.blacklist }}'
+  NOSEARCH: '{{ ternary "yes" "no" .Values.traktarr.nosearch }}'
+  NOTIFICATIONS: '{{ ternary "yes" "no" .Values.traktarr.notifications }}'
+  RUNNOW: '{{ ternary "yes" "no" .Values.traktarr.runnow }}'
+  SKIPUPDATE: '{{ ternary "yes" "no" .Values.traktarr.skipupdate }}'
+  DELAY: "{{ .Values.traktarr.delay }}"
+  SORT: "{{ .Values.traktarr.sort }}"
+
+securityContext:
+  readOnlyRootFilesystem: false
+  runAsNonRoot: false
+
 podSecurityContext:
   runAsGroup: 0
   runAsUser: 0
+
 probes:
   liveness:
     enabled: false
@@ -25,15 +38,18 @@ probes:
     enabled: false
   startup:
     enabled: false
-securityContext:
-  readOnlyRootFilesystem: false
-  runAsNonRoot: false
+
 service:
   main:
     enabled: false
     ports:
       main:
         enabled: false
+
+persistence:
+  config:
+    enabled: true
+    mountPath: /config
 
 portal:
   enabled: false
