--- a/charts/stable/flashpaper/questions.yaml
+++ b/charts/stable/flashpaper/questions.yaml
@@ -9,97 +9,97 @@ questions:
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
   - variable: env
-    group: "App Configuration"
-    label: "Image Environment"
+    group: App Configuration
+    label: Image Environment
     schema:
       additional_attrs: true
       type: dict
       attrs:
         - variable: SITE_TITLE
-          label: "SITE_TITLE"
+          label: Site Title
           schema:
             type: string
             default: "FlashPaper - Self-Destructing Message"
         - variable: RETURN_FULL_URL
-          label: "RETURN_FULL_URL"
+          label: Return Full URL
           schema:
-            type: string
-            default: "true"
+            type: boolean
+            default: true
         - variable: MAX_SECRET_LENGTH
-          label: "MAX_SECRET_LENGTH"
+          label: max Secret Length
           schema:
-            type: string
-            default: "3000"
+            type: int
+            default: 3000
         - variable: ANNOUNCEMENT
-          label: "ANNOUNCEMENT"
+          label: Announcement
           schema:
             type: string
             default: ""
         - variable: MESSAGES_ERROR_SECRET_TOO_LONG
-          label: "MESSAGES_ERROR_SECRET_TOO_LONG"
+          label: Messages Error Secret Too Long
           schema:
             type: string
-            default: "Input length too long"
+            default: Input length Too long
         - variable: MESSAGES_SUBMIT_SECRET_HEADER
-          label: "MESSAGES_SUBMIT_SECRET_HEADER"
+          label: Messages Submit Secret Header
           schema:
             type: string
-            default: "Create A Self-Destructing Message"
+            default: Create A Self-Destructing Message
         - variable: MESSAGES_SUBMIT_SECRET_SUBHEADER
-          label: "MESSAGES_SUBMIT_SECRET_SUBHEADER"
+          label: MESSAGES_SUBMIT_SECRET_SUBHEADER
           schema:
             type: string
             default: ""
         - variable: MESSAGES_SUBMIT_SECRET_BUTTON
-          label: "MESSAGES_SUBMIT_SECRET_BUTTON"
+          label: Messages Submit Secret Button
           schema:
             type: string
-            default: "Encrypt Message"
+            default: Encrypt Message
         - variable: MESSAGES_VIEW_CODE_HEADER
-          label: "MESSAGES_VIEW_CODE_HEADER"
+          label: Messages View Code Header
           schema:
             type: string
-            default: "Self-Destructing URL"
+            default: Self-Destructing URL
         - variable: MESSAGES_VIEW_CODE_SUBHEADER
-          label: "MESSAGES_VIEW_CODE_SUBHEADER"
+          label: Messages View Code Subheader
           schema:
             type: string
-            default: "Share this URL via email, chat, or another messaging service. It will self-destruct after being viewed once."
+            default: Share this URL via email, chat, or another messaging service. It will self-destruct after being viewed once.
         - variable: MESSAGES_CONFIRM_VIEW_SECRET_HEADER
-          label: "MESSAGES_CONFIRM_VIEW_SECRET_HEADER"
+          label: Messages Confirm View Secret Header
           schema:
             type: string
-            default: "View this secret?"
+            default: View this secret?
         - variable: MESSAGES_CONFIRM_VIEW_SECRET_BUTTON
-          label: "MESSAGES_CONFIRM_VIEW_SECRET_BUTTON"
+          label: Messages Confirm View Secret Button
           schema:
             type: string
-            default: "View Secret"
+            default: View Secret
         - variable: MESSAGES_VIEW_SECRET_HEADER
-          label: "MESSAGES_VIEW_SECRET_HEADER"
+          label: Messages View Secret Header
           schema:
             type: string
-            default: "This message has been destroyed"
+            default: This message has been destroyed
         - variable: PRUNE_ENABLED
-          label: "PRUNE_ENABLED"
+          label: Prune Enabled
           schema:
-            type: string
-            default: "true"
+            type: boolean
+            default: true
         - variable: PRUNE_MIN_DAYS
-          label: "PRUNE_MIN_DAYS"
+          label: Prune Min Days
           schema:
-            type: string
-            default: "365"
+            type: int
+            default: 365
         - variable: PRUNE_MAX_DAYS
-          label: "PRUNE_MAX_DAYS"
+          label: Prune Max Days
           schema:
-            type: string
-            default: "730"
+            type: int
+            default: 730
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
-          label: "Main Service"
-          description: "The Primary service on which the healthcheck runs, often the webUI"
+          label: Main Service
+          description: The Primary service on which the healthcheck runs, often the webUI
           schema:
             additional_attrs: true
             type: dict
@@ -107,14 +107,14 @@ questions:
 # Include{serviceSelectorLoadBalancer}
 # Include{serviceSelectorExtras}
                     - variable: main
-                      label: "Main Service Port Configuration"
+                      label: Main Service Port Configuration
                       schema:
                         additional_attrs: true
                         type: dict
                         attrs:
                           - variable: port
-                            label: "Port"
-                            description: "This port exposes the container port on the service"
+                            label: Port
+                            description: This port exposes the container port on the service
                             schema:
                               type: int
                               default: 8544
@@ -125,7 +125,8 @@ questions:
 # Include{serviceList}
 # Include{persistenceRoot}
         - variable: data
-          label: "data Storage"
+          label: App Data Storage
+          description: Stores the Application Data.
           schema:
             additional_attrs: true
             type: dict
@@ -134,7 +135,7 @@ questions:
 # Include{persistenceList}
 # Include{ingressRoot}
         - variable: main
-          label: "Main Ingress"
+          label: Main Ingress
           schema:
             additional_attrs: true
             type: dict
@@ -146,41 +147,41 @@ questions:
 # Include{security}
 # Include{securityContextAdvancedRoot}
               - variable: privileged
-                label: "Privileged mode"
+                label: Privileged mode
                 schema:
                   type: boolean
                   default: false
               - variable: readOnlyRootFilesystem
-                label: "ReadOnly Root Filesystem"
+                label: ReadOnly Root Filesystem
                 schema:
                   type: boolean
                   default: false
               - variable: allowPrivilegeEscalation
-                label: "Allow Privilege Escalation"
+                label: Allow Privilege Escalation
                 schema:
                   type: boolean
                   default: false
               - variable: runAsNonRoot
-                label: "runAsNonRoot"
+                label: runAsNonRoot
                 schema:
                   type: boolean
                   default: false
 # Include{podSecurityContextRoot}
         - variable: runAsUser
-          label: "runAsUser"
-          description: "The UserID of the user running the application"
+          label: runAsUser
+          description: The UserID of the user running the application
           schema:
             type: int
             default: 0
         - variable: runAsGroup
-          label: "runAsGroup"
-          description: The groupID this App of the user running the application"
+          label: runAsGroup
+          description: The groupID this App of the user running the application
           schema:
             type: int
             default: 0
         - variable: fsGroup
-          label: "fsGroup"
-          description: "The group that should own ALL storage."
+          label: fsGroup
+          description: The group that should own ALL storage.
           schema:
             type: int
             default: 568
