add some options ;)

--- a/charts/incubator/snowflake-proxy/templates/common.yaml
+++ b/charts/incubator/snowflake-proxy/templates/common.yaml
@@ -1,1 +1,10 @@
-{{ include "tc.common.loader.all" . }}
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{- $newArgs := (include "snowflake.args" . | fromYaml) }}
+{{- $_ := set .Values "newArgs" $newArgs -}}
+{{- $args := concat .Values.args .Values.newArgs.args }}
+{{- $_ := set .Values "args" $args -}}
+
+{{/* Render the templates */}}
+{{ include "tc.common.loader.apply" . }}
