--- a/charts/incubator/snowflake-proxy/questions.yaml
+++ b/charts/incubator/snowflake-proxy/questions.yaml
@@ -6,6 +6,98 @@ questions:
 # Include{replicas}
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
+  - variable: snowflake
+    group: App Configuration
+    label: Snowflake Proxy Configuration
+    schema:
+      additional_attrs: true
+      type: dict
+      attrs:
+        - variable: allow_non_tls_relay
+          label: Allow Non TLS Relay
+          description: Allow relay without tls encryption
+          schema:
+            type: boolean
+            default: false
+        - variable: allowed_relay_hostname_pattern
+          label: Allow Relay Hostname pattern
+          description: A pattern to specify allowed hostname pattern for relay URL.
+          schema:
+            type: string
+            required: true
+            default: snowflake.torproject.net$
+        - variable: broker
+          label: Broker
+          description: Broker URL
+          schema:
+            type: string
+            required: true
+            default: https://snowflake-broker.torproject.net/
+        - variable: capacity
+          label: Capacity
+          description: Maximum concurrent clients (0 for unlimited)
+          schema:
+            type: int
+            required: true
+            default: 0
+        - variable: ephemeral_ports_range
+          label: Ephemeral Ports Range
+          description: ICE UDP ephemeral ports range in format ("30000:60000")
+          schema:
+            type: string
+            default: "599999:60000"
+        - variable: keep_local_addresses
+          label: Keep Local Addresses
+          description: Keep local LAN address ICE candidates
+          schema:
+            type: boolean
+            default: false
+        - variable: nat_retest_interval
+          label: NAT Retest Interval
+          description: The time interval in second before NAT type is retested, 0s disables retest. Valid time units are s, m, h.
+          schema:
+            type: string
+            required: true
+            default: 24h0m0s
+        - variable: relay
+          label: Relay
+          description: Websocket Relay URL
+          schema:
+            type: string
+            required: true
+            default: wss://snowflake.bamsoftware.com/
+        - variable: stun
+          label: Stun
+          description: STUN URL
+          schema:
+            type: string
+            required: true
+            default: stun:stun.stunprotocol.org:3478
+        - variable: summary_interval
+          label: Summary Interval
+          description: The time interval to output summary, 0s disables summaries. Valid time units are s, m, h.
+          schema:
+            type: string
+            required: true
+            default: 1h0m0s
+        - variable: unsafe_logging
+          label: Unsafe Logging
+          description: Prevent logs from being scrubbed
+          schema:
+            type: boolean
+            default: false
+        - variable: verbose
+          label: Verbose
+          description: Increase log verbosity
+          schema:
+            type: boolean
+            default: false
+        - variable: log
+          label: Log
+          description: Log Filename
+          schema:
+            type: string
+            default: ""
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
@@ -31,7 +123,7 @@ questions:
                               default: 30000
                               required: true
 # Include{serviceExpertRoot}
-            default: false
+            default: true
 # Include{serviceList}
 # Include{persistenceList}
 # Include{security}
