--- a/charts/incubator/arksurvivalevolved/templates/common.yaml
+++ b/charts/incubator/arksurvivalevolved/templates/common.yaml
@@ -5,7 +5,7 @@
   {{- fail (printf "In the service udp2, the port for udp2 must be greater by 1 than the main service's port. You have to set it to <%s>." (add1 .Values.service.main.ports.main.port)) }}
 {{- end -}}
 
-{{- if or (ge (int .Values.service.udpsteam.ports.udpsteam.port) 27020) (le (int .Values.service.udpsteam.ports.udpsteam.port) 27050) -}}
+{{- if and (ge (int .Values.service.udpsteam.ports.udpsteam.port) 27020) (le (int .Values.service.udpsteam.ports.udpsteam.port) 27050) -}}
   {{- fail "UDP Steam Service port cannot be between 27020 and 27050." -}}
 {{- end }}
 
