--- a/charts/incubator/snowflake-proxy/questions.yaml
+++ b/charts/incubator/snowflake-proxy/questions.yaml
@@ -124,20 +124,20 @@ questions:
                 label: runAsNonRoot
                 schema:
                   type: boolean
-                  default: false
+                  default: true
 # Include{podSecurityContextRoot}
         - variable: runAsUser
           label: runAsUser
           description: The UserID of the user running the application
           schema:
             type: int
-            default: 0
+            default: 1000
         - variable: runAsGroup
           label: runAsGroup
           description: The groupID this App of the user running the application
           schema:
             type: int
-            default: 0
+            default: 1000
         - variable: fsGroup
           label: fsGroup
           description: The group that should own ALL storage.
