--- a/charts/stable/nextcloud/values.yaml
+++ b/charts/stable/nextcloud/values.yaml
@@ -57,6 +57,32 @@ secretEnv:
   NEXTCLOUD_ADMIN_USER: "admin"
   NEXTCLOUD_ADMIN_PASSWORD: "adminpass"
 
+phpFpmSettings:
+  pmType: "dynamic"
+  maxChildren: 120
+  startServers: 12
+  minSpareServers: 6
+  maxSpareServers: 18
+  maxRequests: 100
+
+pmConfig:
+  lifecycle:
+    postStart:
+      exec:
+        command: 
+        - /bin/sh
+        - -c
+        - >
+          while [ ! "$(ps aux | grep "php-fpm: master process" | grep -v "grep" | awk "{print \$2}")" ] || [ ! -f "/usr/local/etc/php-fpm.d/www.conf" ]; do sleep 10; done &&
+          sed -i -E '/^pm/ s/^/;/' /usr/local/etc/php-fpm.d/www.conf &&
+          { echo "pm = {{ .Values.phpFpmSettings.pmType }}" ;
+            echo "pm.max_children = {{ .Values.phpFpmSettings.maxChildren }}";
+            echo "pm.start_servers = {{ .Values.phpFpmSettings.startServers }}" ;
+            echo "pm.min_spare_servers = {{ .Values.phpFpmSettings.minSpareServers }}" ;
+            echo "pm.max_spare_servers = {{ .Values.phpFpmSettings.maxSpareServers }}" ;
+            echo "pm.max_requests = {{ .Values.phpFpmSettings.maxRequests }}" ; } >>/usr/local/etc/php-fpm.d/www.conf &&
+          kill -USR2 $(ps aux | grep "php-fpm: master process" | grep -v "grep" | awk "{print \$2}")
+
 probes:
   liveness:
     custom: true
