--- a/charts/incubator/jackett2telegram/Chart.yaml
+++ b/charts/incubator/jackett2telegram/Chart.yaml
@@ -17,7 +17,7 @@ maintainers:
   - email: info@truecharts.org
     name: TrueCharts
     url: https://truecharts.org
-name: jackett
+name: jackett2telegram
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/jackett2telegram
   - https://github.com/danimart1991/jackett2telegram
