fix repo and tag

--- a/charts/incubator/jackett2telegram/values.yaml
+++ b/charts/incubator/jackett2telegram/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: tccr.io/truecharts/jackett
+  repository: danimart1991/jackett2telegram
   pullPolicy: IfNotPresent
-  tag: 0.20.2297@sha256:4de1541011cb56935ba5a8e28a58f6cbcf62a903393dc94581eda0b6e2aa117c
+  tag: 1.9@sha256:c724e612504d6f9d83b979b3bb0190f10fa5ffcec77d4f5e89620e0bbc092e8c
 
 secretEnv:
   TOKEN: ""
