drop /docs/ from home link

--- a/.github/workflows/renovate-bump.yaml
+++ b/.github/workflows/renovate-bump.yaml
@@ -76,7 +76,7 @@ jobs:
               echo "Updating icon of ${chartname}..."
               sed -i -e "s|icon: .*|icon: https:\/\/truecharts.org\/img\/hotlink-ok\/chart-icons\/${chartname}.png|" "${chart}/Chart.yaml"
               echo "Updating home of ${chartname}..."
-              sed -i -e "s|home: .*|home: https:\/\/truecharts.org\/docs\/charts\/${train}\/${chartname}|" "${chart}/Chart.yaml"
+              sed -i -e "s|home: .*|home: https:\/\/truecharts.org\/charts\/${train}\/${chartname}|" "${chart}/Chart.yaml"
               echo "Attempting to update sources of ${chartname}..."
               echo "Using go-yq verion: <$(go-yq -V)>"
               # Get all sources (except truecharts)
