chore(jellyfin): mount transcode as emptydir

--- a/charts/stable/jellyfin/values.yaml
+++ b/charts/stable/jellyfin/values.yaml
@@ -24,6 +24,10 @@ persistence:
     enabled: true
     mountPath: "/cache"
     type: "emptyDir"
+  transcode:
+    enabled: true
+    mountPath: "/config/transcode"
+    type: "emptyDir"
 
 portal:
   enabled: true
