--- a/charts/stable/jellyfin/values.yaml
+++ b/charts/stable/jellyfin/values.yaml
@@ -26,7 +26,7 @@ persistence:
     type: "emptyDir"
   transcode:
     enabled: true
-    mountPath: "/config/transcode"
+    mountPath: "/config/transcodes"
     type: "emptyDir"
 
 portal:
