--- a/charts/stable/kasm/templates/common.yaml
+++ b/charts/stable/kasm/templates/common.yaml
@@ -1,2 +1,13 @@
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{- if .Values.kasm.mountUdev -}}
+{{- $_ := set .Values.persistence "udev" (fromYaml (include "kasm.udev.mount" .)) -}}
+{{- end -}}
+
+{{- if .Values.kasm.mountInput -}}
+{{- $_ := set .Values.persistence "input" (fromYaml (include "kasm.input.mount" .)) -}}
+{{- end -}}
+
 {{/* Render the templates */}}
-{{ include "tc.common.loader.all" . }}
+{{ include "tc.common.loader.apply" . }}
