--- a/charts/stable/kasm/templates/common.yaml
+++ b/charts/stable/kasm/templates/common.yaml
@@ -1,12 +1,14 @@
 {{/* Make sure all variables are set properly */}}
 {{- include "tc.common.loader.init" . }}
 
-{{- if .Values.kasm.mountUdev -}}
-{{- $_ := set .Values.persistence "udev" (fromYaml (include "kasm.udev.mount" .)) -}}
-{{- end -}}
+{{- if hasKey .Values "kasm" -}}
+  {{- if .Values.kasm.mountUdev -}}
+    {{- $_ := set .Values.persistence "udev" (fromYaml (include "kasm.udev.mount" .)) -}}
+  {{- end -}}
 
-{{- if .Values.kasm.mountInput -}}
-{{- $_ := set .Values.persistence "input" (fromYaml (include "kasm.input.mount" .)) -}}
+  {{- if .Values.kasm.mountInput -}}
+    {{- $_ := set .Values.persistence "input" (fromYaml (include "kasm.input.mount" .)) -}}
+  {{- end -}}
 {{- end -}}
 
 {{/* Render the templates */}}
