--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -157,7 +157,7 @@ jobs:
                   link="[**${title}**](charts/${train}/${chart}/${filename%.md})"
                   if [ ${filename} != "index.md" ]; then
                     # Append the link to the index.md file
-                    echo "${link}" >> website/docs/charts/${train}/${chart}/index.md
+                    echo "- ${link}" >> website/docs/charts/${train}/${chart}/index.md
                     echo "" >> website/docs/charts/${train}/${chart}/index.md
                   fi
                 done
