--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -137,11 +137,11 @@ jobs:
                 
                 # Ensure helm security header is always set
                 sed -i '1d' "website/docs/charts/${train}/${chart}/helm-security.md" || echo "failed to sed 1d helm-security..."
-                sed -i '1s/^/# helm-security\n\n/' "website/docs/charts/${train}/${chart}/helm-security.md" || echo "failed to add helm-security header..."
+                sed -i '1s/^/# Helm Security Scan\n\n/' "website/docs/charts/${train}/${chart}/helm-security.md" || echo "failed to add helm-security header..."
                 
                 # Ensure container security header is always set
                 sed -i '1d' "website/docs/charts/${train}/${chart}/container-security.md" || echo "failed to sed 1d container-security..."
-                sed -i '1s/^/# container-security\n\n/' "website/docs/charts/${train}/${chart}/CHANGELOG.md" || echo "failed to add container-security header..."
+                sed -i '1s/^/# Container Security Scan\n\n/' "website/docs/charts/${train}/${chart}/CHANGELOG.md" || echo "failed to add container-security header..."
 
                 touch website/docs/charts/${train}/${chart}/index.md
                 echo "# ${chart}" >> website/docs/charts/${train}/${chart}/index.md
